[tool.poetry]
name = "chungju-road"
version = "0.1.0"
description = "chungju-road PoC"
authors = ["jiwoochirs <travelandi01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.58.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
types-redis = "^4.6.0.20240106"
pre-commit = "^4.0.1"


[tool.poetry.group.poc.dependencies]
streamlit = "^1.41.1"
python-dotenv = "^1.0.1"

[tool.coverage.run]
omit=["tests/*", "test_*.py", "migrations/*"]

[tool.isort]
profile="black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
